<resources>
    <string name="app_name">Mandi</string>
    <string name="verify_welcome">Let start the journey</string>
    <string name="splash_welcome">"Welcome in the world of virtual Farm</string>
    <string name="verify">Verify</string>
    <string name="farmer_image">farmer image</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="splashscreen">splashscreen</string>
    <string name="mandi">Mandi</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="todo">TODO</string>
    <string name="bottom1">Marketplace</string>
    <string name="bottom2">Search</string>
    <string name="register">Register</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="please_enter_the_otp_sent_to_you">Please Enter the OTP sent to you</string>
    <string name="submit">SUBMIT</string>
    <string name="welcomeMessage">Welcome \n to our store</string>
    <string name="welcomeSecondMessage">Get your groceries in as fast as one hour</string>
    <string name="get_started">Get started</string>
    <string name="authPageMessage">Get your groceries \nwith superest</string>
    <string name="orConnectWithGoogle">Or connect with Google</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="please_add_your_phone_number_to_continue">Please add your phone number to continue</string>
    <string name="please_add_a_valid_phone_number">Please add a valid phone number</string>
    <string name="please_check_internet_connection">Please check internet connection</string>
    <string name="errorMessage">An error occurred, Please try again later</string>
    <string name="enter_your_6_digit_code">Enter your 6-digit code</string>
    <string name="code">Code</string>
    <string name="code_hint">- - - - - -</string>
    <string name="type_verification_code_first">Please type verification code first.</string>
    <string name="resend_code">Resend Code</string>
    <string name="countDown">00:%1$02d</string>
    <string name="add_your_name_here">Add your name here.</string>
    <string name="select_your_location">Select your location</string>
    <string name="confirm_location">confirm location</string>
    <string name="google_maps_api_key">AIzaSyC6t-QwrVTSmQZeQuj05bvY_AWhIDQ3Mfw</string>
    <string name="location_permission_attention">Attention! Some features can\'t work normally without location permission</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="enableGPS">This application requires GPS to work properly, do you want to enable it?</string>
    <string name="cannotMakeGPSRequest">You can\'t make map requests</string>
    <string name="enable">Enable</string>
    <string name="get_my_location">Locate Me</string>
    <string name="addUserName">Please add your name first!</string>
    <string name="addUserImage">Please add an  image to your account!</string>
    <string name="addUserLocation">Please add your location first!</string>
    <string name="errorCreateAccount">An error occurred when trying to create account, please check your internet connection and try again.</string>
    <string name="accountCreatedSuccessfully">Account created successfully.</string>
    <string name="webClientId">CLIENT ID</string>
    <string name="welcome">Welcome back,</string>
    <string name="search_store">Search Store</string>
    <string name="see_all">See all</string>
    <string name="shop">Shop</string>
    <string name="explore">Explore</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>
    <string name="productQuantity">%s, Price</string>
    <string name="shareProduct">Hello bro,\n%1$s product is very awesome and have a very cheap price, it just cost %2$.2f$.\n You can buy it now with Superest
    supermarket app.</string>
    <string name="product_detail">Product Detail</string>
    <string name="progressTextValue">%.0fg</string>
    <string name="progressCaloriesValue">%.0f</string>
    <string name="find_products">Find Products</string>
    <string name="add_all_to_cart">Add all to cart</string>
    <string name="savedToCart">Products have been added to the card successfully.</string>
    <string name="go_to_checkout">Go to checkout</string>
    <string name="my_cart">My Cart</string>
    <string name="productAddToCart">Product added to My Cart successfully.</string>
    <string name="my_orders">My Orders</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="log_out">Log Out</string>
    <string name="delivery">Delivery</string>
    <string name="payment">Payment</string>
    <string name="total_cost">Total Cost</string>
    <string name="place_order">Place Order</string>
    <string name="ok">OK</string>
    <string name="addPaymentMethod">Please add a payment method to continue!</string>
    <string name="back_to_home">Back to home</string>
    <string name="successful_order_title">Your Order has been accepted</string>
    <string name="successful_order_message">Your items has been placed and is on its way to begin processed.</string>
    <string name="track_order">Track order</string>
    <string name="fail_order_title">Oops! Order Failed</string>
    <string name="fail_order_message">Something went wrong. Please try another payment card.</string>
    <string name="tryAgain">Try Again</string>
    <string name="paymentError">An error occurred with payment method.</string>
    <string name="error">Error:</string>
    <string name="noProductsCart">No Products in Cart!</string>
    <string name="tracking_order">Tracking Order:</string>
    <string name="order_placed">Order Placed</string>
    <string name="order_placed_message">We have received your order</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="order_confirmed_message">Your order has been confirmed</string>
    <string name="order_shipped">Order Shipped</string>
    <string name="order_shipped_message">Your order is on its way</string>
    <string name="order_delivered">Order Delivered</string>
    <string name="order_delivered_message">Your order is now in your hands</string>
    <string name="accountSettings">Account Settings</string>
    <string name="logOutMessage">You have logged out successfully</string>
    <string name="locationChanged">Your location changed successfully!</string>
    <string name="myLocation">My Location:</string>
    <string name="productQuantityError">\"Please add valid quantity!\"</string>
    <string name="order_num">Order Num: </string>
    <string name="order_date">Order Date: </string>
    <string name="order_location">Order Location: </string>
    <string name="order_status">Order Status: </string>
    <string name="order_products">Order Products: </string>
    <string name="orderProductsWithCost">%s products - %.2f$</string>
    <string name="product_name">Name:</string>
    <string name="product_quantity">Quantity:</string>
    <string name="product_total_price">Total Price:</string>
    <string name="accountUpdatedSuccessfully">Account Updated Successfully</string>
    <string name="backOnline">Back Online</string>
    <string name="connectionLost">Connection Lost!</string>
        <string name="waves_of_food">Waves Of Food</string>
        <string name="deliver_favorite_food">Deliver Favorite Food</string>
        <string name="hello_blank_fragment">Hello blank fragment</string>
        <string name="choose_your_location">Choose Your Location</string>
        <string name="choose_location">Choose Location</string>
        <string name="dummy_text">To provide you with the best dining experience, we need your permission to access your device\'s location. By enabling location services, we can offer personalized restaurant recommendations, accurate delivery estimates, and ensure a seamless food delivery experience.\"</string>
        <string name="image_desc_text">this image add best UI or design</string>
        <string name="food_name">Food Name</string>
        <string name="short_description">Short Description</string>
        <string name="short_description_lorem">Short description Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad</string>
        <string name="ingredients">Ingredients</string>
        <string name="ing_show_berry"><![CDATA[1-> Strowberry\n 2-> Cream\n 3-> wheat]]></string>
        <string name="add_to_cart">Add To Cart</string>
        <string name="login_to_your_account">Login To Your Account</string>
        <string name="email">Email</string>
        <string name="password">Password</string>
        <string name="or">Or</string>
        <string name="continue_with">Continue With</string>
        <string name="facebook">Facebook</string>
        <string name="google">Google</string>
        <string name="login">Login</string>
        <string name="don_t_have_account">Don’t Have Account?</string>
        <string name="explore_your_favorite_food">Explore Your Favorite Food</string>
        <string name="enjoy_restaurant_quality_meals_n_at_home">Enjoy Restaurant Quality Meals \n at Home</string>
        <string name="next">Next</string>
        <string name="design_by_n_muhsan_tech">Design By \n Muhsan-Tech</string>
        <string name="already_have_an_account">Already Have An Account?</string>
        <string name="name">Name </string>
        <string name="sign_up_here">Sign Up Here</string>
        <string name="sign_up_with">Sign Up With</string>
        <string name="create_account">Create Account</string>
        <string name="popular">Popular</string>
        <string name="view_menu">View Menu</string>
        <string name="cart_food_name">Cart Food Name</string>
        <string name="price">Price</string>
        <string name="_1">1</string>
        <string name="cart">Cart</string>
        <string name="proceed">Proceed</string>
        <string name="search">Search</string>
        <string name="menu">Menu</string>
        <string name="recent_buy">Recent buy</string>
        <string name="spacy_crab">Spacy fresj crab</string>
        <string name="waroenk_kita">Waroenk kita</string>
        <string name="_35">$35</string>
        <string name="received">Received</string>
        <string name="previously_buy">Previously buy</string>
        <string name="address">Address</string>
        <string name="address_Dummy">Android is a mobile operating system based on a modified version of the Linux kernel and other open-source software, designed primarily for touchscreen mobile devices such as smartphones and tablets.</string>
        <string name="admin_email">admin@gmail.com</string>
        <string name="phone">Phone</string>
        <string name="phone_number">0097123456789</string>
        <string name="save_information">Save Information</string>
        <string name="go_home">Go Home</string>
        <string name="congrats_nyour_order_placed">Congrats \nYour Order Placed</string>
        <string name="notifications">Notifications</string>
        <string name="textview">TextView</string>
        <string name="buy_again">Buy Again</string>
        <string name="edit">Edit</string>
        <string name="home">Home</string>
        <string name="history">History</string>
        <string name="profile">Profile</string>
        <string name="default_web_client_Id" translatable="false">732386522808-1umop6dsudtos1ufn45mfn2cqp3ma550.apps.googleusercontent.com</string>
</resources>