<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_back"
    tools:context=".Registration"
    android:orientation="vertical">




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="@font/robotoromanmedium"
            android:text="@string/verify_welcome"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/Farmer"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="@drawable/farmer"
            android:contentDescription="@string/farmer_image" />

    <EditText
        android:id="@+id/Contact"
        android:layout_width="381dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:background="@drawable/edittext_design1"
        android:digits="0123456789"
        android:drawableStart="@drawable/baseline_phone_24"
        android:drawablePadding="8dp"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:maxLength="10"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/light_grey"
        android:textSize="16sp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/regi"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/Theme2"
        android:text="@string/verify"
        android:textColor="@color/white" />


        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            />






</LinearLayout>